--- a/objects/_layout.scss
+++ b/objects/_layout.scss
@@ -9,3 +9,15 @@
 		box-sizing: border-box;
 		position: relative;
 	}
+
+
+
+@each $name, $size in $gutters {
+    .o-layout--#{$name} {
+        margin-left: -$size;
+
+        .o-layout__item {
+            padding-left: $size;
+        }
+    }
+}
